--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 								using Python, Excel, Powerbi and Tableau after getting data with SQL <!--<a href="http://html5up.net/license">Creative Commons</a>-->.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								
 							</ul>
 						</div>
 					</section>
@@ -55,6 +56,7 @@
 										insights from complex datasets and communicate them effectively to stakeholders.</p>
 									<ul class="actions">
 										<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
+										<li><a href="https://drive.google.com/drive/folders/1zKf2sKMl1mJ1TfbVBW8w20RQatlfsQuX?usp=drive_link" class="button">My Projects</a></li>
 									</ul>
 								</div>
 							</div>
